fix: dropdown on ios

--- a/src/app/shared/dropdown/dropdown.component.scss
+++ b/src/app/shared/dropdown/dropdown.component.scss
@@ -39,6 +39,7 @@
   .mat-select-value {
     max-width: 140px !important;
     padding-right: 5px;
+    width: auto;
   }
 
   .mat-select-arrow {
